# fvp_calibration

./: .gitignore  CMakeLists.txt  README.md
apriltag/: CMakeLists.txt  apriltag.c  apriltag.h  apriltag_quad_thresh.c
apriltag/common/: workerpool.c
apriltag_images/: resize_nearest.py
data/: urg_xy.csv
notebook/: align_robot_model_LRF.ipynb  visualize_poses.ipynb
src/: angleAdjuster.cpp  angle_adjuster.cpp  angle_adjuster.hpp  calibration.cpp  calibration.hpp  detect_tag.hpp  ocam_functions.cpp  ocam_functions.hpp  opencv_demo.cpp  optimizer.cpp  optimizer.hpp  reprojection_error.hpp  undistort_points.hpp
